 * Support files bigger than 4GB via mkisofs 2.01.01a32 and above
 * Do only reload the medium for verification if necessary (depends on the writer)
 * Support for Blu-Ray writing
 * Support for DVD and Blu-Ray writing via cdrecord
 * New audio ripping pattern %e which is replaced by the file extension
 * Better support for RTL languages
 
2.0-rc3 (1.92)
==============
Bugfixes:
 * In some cases medium doesn't get accepted for multisession burning (230742)
 * Data files in VCD ripping view are not listed
 * Show "Modify Permissions" button in System Problem Dialog only when it makes sense (230706)
 * Crash after "Cancel" was clicked while adding audio files to AudioCD project (231348)
 * Error window at the start when a place on the left pane is not accessible (230194)
 * Incorrect minimum size of welcome widget (231939)
 * Hangs while ripping AudioCD with data tracks (231174)
 
2.0-rc2 (1.91)
==============
Bugfixes:
 * Added missing translation files for libk3b, libk3bdevice and K3bSetup

2.0-rc1 (1.90)
==============
Changes:
 * K3bSetup ported to KAuth framework

Bugfixes:
 * Crash on start of Audio Ripping Dialog (226595)
 * Incorrect ordering of files added to Audio Project (224649)
 * Too wide Image Burn Dialog when file path was long (225735)
 * Crash when creating image files for AudioCD project (219500)
 * Crash when manipulating VCD project items (227855)
 * Mixed-up metadata in files created with external encoder (227927)
 * Cannot edit time values in "Split Audio Track" and "Edit Audio Track" dialogs (229042)
 * Empty Blu-ray medium not detected properly (227339, 229039)
 * Crash during splitting/editing audio tracks
 * Entry fields doesn't work in burn window when "Only Create Image" option is checked (220970)
 * Layout issues in settings window (227733)

2.0-beta1 (1.70)
================
Changes:
 * Added Blu-ray support
 * Added "Options" button to file browser toolbar with view options menu (e.g. "Show Hidden Files") (196992)